<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.registrationpage.RegisterFragment"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/textView_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/Register"
            android:textSize="36sp"
            android:layout_marginStart="0dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar_login"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:autofillHints="emailAddress"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:textColorHint="#3E2723"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                tools:targetApi="o" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textColorHint="#33691E"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="11dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:drawablePadding="10dp"
                android:hint="@string/Confirm_password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textColorHint="#616161"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/btn_register_reg"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="#00FF2A"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="20sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button_reg"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:checked="false"
                android:contentDescription="@string/register"
                android:minHeight="48dp"
                android:text="@string/login"
                android:textColor="#212121"
                android:textSize="14sp" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>